--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
     "@angular/compiler": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^7.0.3",
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@popperjs/core": "^2.10.1",
+    "ajv": "^8.6.2",
+    "bootstrap": "^5.1.0",
     "express": "^4.17.1",
+    "firebase": "^9.0.1",
+    "jquery": "^3.6.0",
     "path": "^0.12.7",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "typescript": "~4.3.5",
@@ -34,13 +41,21 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "install-peers": "^1.0.3",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "@angular-devkit/architect": "^0.1200.0",
+    "firebase-tools": "^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   },
   "engines": {
     "node": "v14.17.4",
