--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
+    "@angular/animations": "^12.2.4",
     "@angular/cli": "~12.2.3",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "firebase": "^9.0.1",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.1.0",
     "path": "^0.12.7",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
