--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.10.1",
     "ajv": "^8.6.2",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "express": "^4.17.1",
     "firebase": "^9.0.1",
     "jquery": "^3.6.0",
